<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="1"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_sortby"
        android:orderInCategory="2"
        android:title="@string/menu_sort_by_group"
        app:showAsAction="ifRoom">
        <menu>
            <group>
                <item
                    android:id="@+id/menu_sortby_popularity"
                    android:orderInCategory="1"
                    android:title="@string/menu_sort_by_1"/>
                <item
                    android:id="@+id/menu_sortby_ratings"
                    android:orderInCategory="2"
                    android:title="@string/menu_sort_by_2"/>
                <item
                    android:id="@+id/menu_sortby_favourites"
                    android:orderInCategory="3"
                    android:title="@string/menu_sort_by_3"/>
            </group>
        </menu>
    </item>

</menu>


<!--
<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

</menu>-->
